--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
 - make switching between imperial and metric work
 - find out how to do proper superscripts on strings in textViews
+- organize decimal formats during conversion to keep 3 decimal places max for span and trib width in metric and in imperial
+- format DL and LL to be 1 decimal place for metric and zero decimal places for imperial
+- format deflection ratio to be integer or float with zero decimal places
+- look at text fade in/out animations and how to incorporate them.
+
+
 
