Landscape layout, units, formatting and refresh on launch added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="deadUDL_label">Dead(UDL)</string>
     <string name="liveUDL_label">Live(UDL)</string>
     <string name="deflnRatio_label">LL Defln L/</string>
-    <string name="Mf_label">Mf</string>
-    <string name="Rf_label">Rf</string>
-    <string name="Ix_label">Ix</string>
+    <string name="Mf_label">Mf =</string>
+    <string name="Rf_label">Rf =</string>
+    <string name="Ix_label">Ix \u2264</string>
 
     <string name="span_units_si">m</string>
     <string name="tribwidth_units_si">m</string>
@@ -19,7 +19,7 @@
     <string name="defln_units_si">mm</string>
     <string name="Mf_units_si">kNm</string>
     <string name="Rf_units_si">kN</string>
-    <string name="Ix_units1_si">mm4</string>
+    <string name="Ix_units1_si">mm<sup><small>4</small></sup></string>
 
 
 
@@ -30,7 +30,7 @@
     <string name="defln_units_imp">in</string>
     <string name="Mf_units_imp">ft-k</string>
     <string name="Rf_units_imp">k</string>
-    <string name="Ix_units1_imp">in4</string>
+    <string name="Ix_units1_imp">in<sup><small>4</small></sup></string>
 
 
 </resources>
