cleaned up settings screen

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 - look at text fade in/out animations and how to incorporate them.
 - make sure units are checked and matched to currently selected checkbox for switch to landscape
+- read in settings for live and dead load factors and for youngs modulus value
 
 
 
